--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sortablejs": "^1.10.2",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
+    "vuedraggable": "^2.23.2",
     "vuex": "3.1.0"
   },
   "devDependencies": {
