--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,7 @@ ENV = 'development'
 # base api
 # VUE_APP_BASE_API = 'http://192.168.100.210:5005'
 VUE_APP_BASE_API = 'http://192.168.100.212:5700'
+VUE_APP_BASE_WS = 'ws://192.168.100.212:5700/video_template'
 # VUE_APP_BASE_API = 'http://192.168.100.178:5700'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
