--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,6 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'http://192.168.100.212:5700'
+VUE_APP_BASE_API = 'http://192.168.100.238:5700'
+VUE_APP_BASE_WS = 'ws://192.168.100.238:5700/video_template'
 
