--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue": "2.6.10",
     "vue-router": "3.0.6",
     "vuedraggable": "^2.23.2",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "zrender": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
