--- a/.env.development
+++ b/.env.development
@@ -7,6 +7,8 @@ ENV = 'development'
 
 VUE_APP_BASE_API = 'http://192.168.100.238:5700'
 VUE_APP_BASE_WS = 'ws://192.168.100.238:5700/video_template'
+# VUE_APP_BASE_API = 'ws://192.168.100.212:5700'
+# VUE_APP_BASE_WS = 'ws://192.168.100.212:5700/video_template'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
